[tool.poetry]
name = "钉钉直播回放下载"
version = "0.1.0"
description = ""
authors = ["Akkuman <akkumans@qq.com>"]

[[tool.poetry.source]]
name = "sjtu"
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
default = true

[tool.poetry.dependencies]
python = "^3.9"
mitmproxy = "^9.0.1"
playwright = "^1.30.0"
httpx = "^0.23.3"
aiofiles = "^23.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
